# Math-Automation

./: .gitignore  README.md  automathletics.py  automyimaths.py  pyproject.toml  requirements-build.txt  requirements-ghactions.txt  requirements.txt
.github/workflows/: build.yml  exe.yml  release.yml
overrides/: README.md
overrides/cdn-activity.mathletics.com/public/v1/: deterrent-0.js
overrides/legacyactivity.mathletics.com/activities/prod/common/64/css/: main.css
src/math_automation/: _mathletics_library.py  mathletics_entrypoint.py
